# C-

./: HelloWorld.c  README.md
Array/: checkIfSymbolIsNumber.c  testingArray.c
Array/DaysOfWeek/: daysOfWeek.c
Array/Reverse numbers in array/: reverse numbers array.c
Array/SizeOfBytes/: SizeOfBytesInArray.c
Basic course/Array/: MaxNumberInArr.c  TwoDimensionWithScanf.c  compareIfFloatAreInteger.c  mirrorCheckArr.c
Basic course/Char/: loadingBar.c
Basic course/Conditional statements/: ageVerification.c  chrismasSpirit.c  orders.c  secretChat.c
Basic course/Drawing/: drawing.c  triangleWithNumbers.c
Basic course/Function/: ConvertToCelsium.c  calculateBarBill.c  daysOfYear.c  firstFunction.c  functionCall.c  functionFloatRead.c  grade.c  howManyDigits.c  lowerNumber2.c  maxPriceDaysOfWeek.c  maxWorkingDays.c  minPriceFromWeek.c  printGradeInWords.c  resultOfManipulation.c  sizeOfOneNumber.c  twoFunction .c
Basic course/Loops/: AnotherLoopExcersice.c  breakOperator.c  whileWithStrings.c
Basic course/Pointer/: pointerFirstLection.c
Basic course/Strings/: stringCompare.c
Basic course/Variables/: fahrToCelsiumTable.c  integerOperations.c  isVowel  isVowel.c  nod  nod.c  randOperation  randOperation.c  snowBalls.c  tableOfMulti  tableOfMulti.c
Basic course/get and put/: scanfManipulation.c
Basic course/minNumDivide/: main.c  minNumDivide.cbp  minNumDivide.depend
Basic course/projects/: casino.c  digitalClock.c  ticTokToeAlone.c
Conditional statements/: HiMyLove.c  HowMuchCoffeeDoYouNeed.c  ageProve.c  maxMultiple.c  partyProfit.c
Drawing/: myTestForDrawingKnowege.c  triangle.c  triangle1.c  triangleWithNesstedLoops.c
Full Course/: RadnomGenerator.c  full course.txt
Full Course/Homework/11.14_cmake/megaAwesomeTask/: CMakeLists.txt
Full Course/Homework/11.14_cmake/project_cmake/: CMakeLists.txt  main.c  print.c  print.h
Function/: FunctionWithPrototype.c  IncomeIsCharReturnOnlyDigits.c  calculateRectangleArea.c  factoriel.c  factorielWithTwoNumbers.c  february.c  functionReadR.c  howManyDigits.c  isEven.c  isYearIsLeapYear.c  lowerNumber.c  minNumberFromThree.c  minPriceFromWeek.c  palindrome.c  simpleCalculator.c
Loops/: continueOperator.c  do_while.c  easterBread.c  forLoops.c  switchHello.c  whileAndDoExcersice.c  whileSumOfNumbers.c
Pizza Game/: CMakeLists.txt
Pointer/: arrayPointer.c
StarCraft/: CMakeLists.txt
StarCraft_v2/: CMakeLists.txt
Strings/: getChar.c  gymProgram.c  reverseWord.c  strcmp.c  upperCaseChech.c
Struct/: firstStruct.c
Text reverse/: text reverse.c
Variables/: integerOperation.c
Warcraft/: CMakeLists.txt  debug.sh  release.sh  valgrind_tesst.sh
Warcraft/include/: ArchMage.h  DeathKnight.h  Defines.h  DrawRanger.h  ErrorHandler.h  GameLogic.h  Hero.h  Utilities.h  Vector.h
Warcraft/include/heroes/: ArchMage.h  DeathKnight.h  DrawRanger.h
Warcraft/src/: ArchMage.c  DeathKnight.c  DrawRanger.c  ErrorHandler.c  GameLogic.c  Hero.c  Utilities.c  Vector.c  main.c
Warcraft/src/heroes/: ArchMage.c  DeathKnight.c  DrawRanger.c
get and put/: main.c
projects/: TicTacToeGame.c  casino.c  simple calculator.c
(+412 files in other folders)
